Fix dataset creation form and validation errors display. Still have problems with text area validation errors: py:match seems to eat too much of the form around them.

--- a/openspending/ui/public/static/style/style.css
+++ b/openspending/ui/public/static/style/style.css
@@ -107,6 +107,10 @@ input, textarea, button, select, .btn {
   margin-bottom: 0px;
 }
 
+form .error {
+  color: #B94A48;
+}
+
 footer ul {
   list-style-type: none;
   margin: 0em;
